nutype_test_suite/tests/ui/string/sanitize/unknown.stderr
error: Unknown sanitizer `cleanup`
 --> tests/ui/string/sanitize/unknown.rs:3:19
  |
3 | #[nutype(sanitize(cleanup = true))]
  |                   ^^^^^^^
